--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
         <link rel="stylesheet" type="text/css" href="static/bootstrap/dist/css/bootstrap.min.css" />
     </head>
     <body>
+        <div ng-controller="NetworkController as network" class="container-fluid">
+            <div class="pull-right col-md-2">
+                <button ng-click="network.addEntity()" type="button" class="btn-block">Add entity</button>
+            </div>
+            <div id="canvas" class="col-md-10"></div>
+        </div>
+        <script type="text/javascript" src="static/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="static/angular/angular.min.js"></script>
+        <script type="text/javascript" src="static/d3/d3.min.js"></script>
+        <script type="text/javascript" src="static/webcola/WebCola/cola.v3.min.js"></script>
         <script type="text/javascript" src="app.js"></script>
     </body>
 </html>
