add width, color attributes to Relation and Entity

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <div ng-controller="NetworkController as network" class="container-fluid">
             <div class="pull-right col-md-2">
                 <button ng-click="network.addEntity()" type="button" class="btn-block">Add entity</button>
+                <button ng-click="network.doFlowLayout()" type="button" class="btn-block">Do auto-layout</button>
+                <button ng-click="network.lockEntities()" type="button" class="btn-block">Turn off auto-layout</button>
             </div>
             <div id="canvas" class="col-md-10"></div>
         </div>
